secondo commit: completato

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 <body>
     <h1>Welcome to the password generator</h1>
 
-    <h3>Questo sistema andrà a genrare una password in base alle informazioni che deciderai di condividere</h3>
+    <p>Questo sistema andrà a genrare una password in base alle informazioni che ti chiederemo di condividere</p>
 
-    <h4>La tua password: </h4>
+    <div id="nome"></div>
+    <div id="cognome"></div>
+    <div id="colore-preferito"></div>
+
+    <p>In base a queste informazioni, la tua password sarà: <span id="password"></span></p>
     
 </body>
 </html>
